testsuite/poke.pkl/div-offsets-diag-2.pk
/* { dg-do compile } */

defvar o = 3#B / (1#Mb - 1024#Kb); /* { dg-error "" } */
